<resources>
    <string name="app_name">NewsFeedApp</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Sort</string>

    <!--Strings for Catalog Preference -->
    <string name="settings_catalog_label">Catalog Option</string>
    <string name="settings_catalog_key" translatable="false">Select Options</string>
    <string name="settings_catalog_default" translatable="false">technology</string>

    <!-- Label for Order-By Preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for Order-By time Preference -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>


    <!-- Label for order-by magnitude option -->
    <string name="settings_order_by_catalog_label">Catalog</string>
    <string name="settings_order_by_catalog_value" translatable="false">catalog</string>






</resources>
