<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />


    <ListPreference
        android:entries="@array/settings_order_by_catalog_labels_option"
        android:entryValues="@array/settings_order_by_catalog_labels_optionValues"
        android:key="@string/settings_catalog_key"
        android:defaultValue="@string/settings_catalog_default"
        android:title="@string/settings_catalog_label" />

</PreferenceScreen>